test/fail/M0063.mo
ignore debug_show (func () {})
